@@ -1,6 +1,5 @@
 Capture::Tiny
 ExtUtils::CChecker
-File::ShareDir
 Module::Build
 Test::Builder::Module
 Test::More
