@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - rm dep on File::ShareDir (can't be used before install anyway)
 
 0.02      2013-12-12 16:17:01 -0500
   - detect and handle when testing an Alien module that hasn't been installed yet
